--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,7 @@
       "argsIgnorePattern": "_"
     }],
     "no-useless-constructor": "off",
+    "camelcase": "off",
     "@typescript-eslint/naming-convention": ["error",
       {
         "selector": "interface",
