--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "celebrate": "^12.2.0",
     "cors": "^2.8.5",
     "date-fns": "^2.14.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.6",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.6",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.6",
     "@types/jest": "^26.0.7",
     "@types/jsonwebtoken": "^8.5.0",
